# tp-lab-5

./: CMakeLists.txt
data/: groups.csv  students.csv
include/: dean.h  group.h  student.h
src/: dean.cpp  group.cpp  main.cpp  student.cpp
